parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSANT
    CASE
    CONST
    DEQUAL
    DISTINT
    DIV
    DOWNTO
    FILE
    FOR
    GOTO
    GREATEREQUAL
    HASHTAG
    IN
    ISEQUAL
    LABEL
    LBLOCK
    LSQBRACKET
    MINUSMINUS
    MOD
    NIL
    PACKED
    PLUSPLUS
    QUOTE
    RBLOCK
    RECORD
    REPEAT
    RSQBRACKET
    SET
    SLASH
    TILDE
    TO
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block
Rule 2     declaration -> var_declaration
Rule 3     declaration -> procedure_declaration
Rule 4     declaration -> function_declaration
Rule 5     var_declaration -> VAR ID var_declaration2 COLON type
Rule 6     var_declaration2 -> empty
Rule 7     var_declaration2 -> COMMA ID var_declaration2
Rule 8     procedure_declaration -> procedure_declaration2 SEMICOLON
Rule 9     procedure_declaration -> empty
Rule 10    procedure_declaration2 -> PROCEDURE ID SEMICOLON block
Rule 11    function_declaration -> FUNCTION ID LPAREN parameters RPAREN COLON type SEMICOLON block
Rule 12    parameters -> VAR ID COLON type parameters2
Rule 13    parameters -> ID COLON type parameters2
Rule 14    parameters -> empty
Rule 15    parameters2 -> COMMA VAR ID COLON type parameters2
Rule 16    parameters2 -> COMMA ID COLON type parameters2
Rule 17    parameters2 -> empty
Rule 18    type -> simple_type
Rule 19    type -> array_type
Rule 20    array_type -> ARRAY LBRACKET NUMBER RBRACKET OF simple_type
Rule 21    simple_type -> INTEGER
Rule 22    block -> BEGIN statement block2 SEMICOLON END DOT
Rule 23    block -> BEGIN statement block2 END DOT
Rule 24    block2 -> empty
Rule 25    block2 -> SEMICOLON statement block2
Rule 26    empty -> <empty>
Rule 27    statement -> simple_statement
Rule 28    statement -> structured_statement
Rule 29    statement -> declaration
Rule 30    simple_statement -> assignment_statement
Rule 31    simple_statement -> call
Rule 32    simple_statement -> return_statement
Rule 33    simple_statement -> read_statement
Rule 34    simple_statement -> write_statement
Rule 35    simple_statement -> assert_statement
Rule 36    assignment_statement -> variable ASSIGN expr
Rule 37    call -> ID LPAREN arguments RPAREN
Rule 38    arguments -> expr arguments2
Rule 39    arguments -> SIMPLEQUOTE expr SIMPLEQUOTE arguments2
Rule 40    arguments -> empty
Rule 41    arguments2 -> empty
Rule 42    arguments2 -> COMMA expr arguments2
Rule 43    arguments2 -> COMMA SIMPLEQUOTE expr SIMPLEQUOTE arguments2
Rule 44    return_statement -> RETURN
Rule 45    return_statement -> RETURN expr
Rule 46    read_statement -> READ LPAREN read_statement2 RPAREN
Rule 47    read_statement2 -> variable
Rule 48    read_statement2 -> COMMA variable read_statement2
Rule 49    write_statement -> WRITELN LPAREN arguments RPAREN
Rule 50    assert_statement -> ASSERT LPAREN boolean_expr RPAREN
Rule 51    boolean_expr -> TRUE
Rule 52    boolean_expr -> FALSE
Rule 53    boolean_expr -> literal relational_operator literal
Rule 54    structured_statement -> block
Rule 55    structured_statement -> if_statement
Rule 56    structured_statement -> while_statement
Rule 57    if_statement -> IF boolean_expr THEN statement
Rule 58    if_statement -> IF boolean_expr THEN statement ELSE statement
Rule 59    while_statement -> WHILE boolean_expr DO statement
Rule 60    expr -> simple_expr
Rule 61    expr -> simple_expr relational_operator simple_expr
Rule 62    simple_expr -> sign term simple_expr2
Rule 63    simple_expr -> term simple_expr2
Rule 64    simple_expr2 -> empty
Rule 65    simple_expr2 -> adding_operator term simple_expr2
Rule 66    term -> factor
Rule 67    term -> factor multiplying_operator factor
Rule 68    factor -> call
Rule 69    factor -> variable
Rule 70    factor -> literal
Rule 71    factor -> LPAREN expr RPAREN
Rule 72    factor -> NOT factor
Rule 73    factor -> factor DOT SIZE
Rule 74    variable -> ID
Rule 75    variable -> LBRACKET ID NUMBER RBRACKET
Rule 76    relational_operator -> EQUAL
Rule 77    relational_operator -> LESS GREATER
Rule 78    relational_operator -> LESS
Rule 79    relational_operator -> LESSEQUAL
Rule 80    relational_operator -> GREATER EQUAL
Rule 81    relational_operator -> GREATER
Rule 82    sign -> PLUS
Rule 83    sign -> MINUS
Rule 84    adding_operator -> PLUS
Rule 85    adding_operator -> MINUS
Rule 86    adding_operator -> OR
Rule 87    multiplying_operator -> TIMES
Rule 88    multiplying_operator -> DIVIDE
Rule 89    multiplying_operator -> PERCENTAGE
Rule 90    multiplying_operator -> AND
Rule 91    literal -> NUMBER
Rule 92    literal -> string
Rule 93    string -> empty
Rule 94    string -> ID string

Terminals, with rules where they appear

AMPERSANT            : 
AND                  : 90
ARRAY                : 20
ASSERT               : 50
ASSIGN               : 36
BEGIN                : 22 23
CASE                 : 
COLON                : 5 11 12 13 15 16
COMMA                : 7 15 16 42 43 48
CONST                : 
DEQUAL               : 
DISTINT              : 
DIV                  : 
DIVIDE               : 88
DO                   : 59
DOT                  : 22 23 73
DOWNTO               : 
ELSE                 : 58
END                  : 22 23
EQUAL                : 76 80
FALSE                : 52
FILE                 : 
FOR                  : 
FUNCTION             : 11
GOTO                 : 
GREATER              : 77 80 81
GREATEREQUAL         : 
HASHTAG              : 
ID                   : 1 5 7 10 11 12 13 15 16 37 74 75 94
IF                   : 57 58
IN                   : 
INTEGER              : 21
ISEQUAL              : 
LABEL                : 
LBLOCK               : 
LBRACKET             : 20 75
LESS                 : 77 78
LESSEQUAL            : 79
LPAREN               : 11 37 46 49 50 71
LSQBRACKET           : 
MINUS                : 83 85
MINUSMINUS           : 
MOD                  : 
NIL                  : 
NOT                  : 72
NUMBER               : 20 75 91
OF                   : 20
OR                   : 86
PACKED               : 
PERCENTAGE           : 89
PLUS                 : 82 84
PLUSPLUS             : 
PROCEDURE            : 10
PROGRAM              : 1
QUOTE                : 
RBLOCK               : 
RBRACKET             : 20 75
READ                 : 46
RECORD               : 
REPEAT               : 
RETURN               : 44 45
RPAREN               : 11 37 46 49 50 71
RSQBRACKET           : 
SEMICOLON            : 1 8 10 11 22 25
SET                  : 
SIMPLEQUOTE          : 39 39 43 43
SIZE                 : 73
SLASH                : 
THEN                 : 57 58
TILDE                : 
TIMES                : 87
TO                   : 
TRUE                 : 51
TYPE                 : 
UNTIL                : 
VAR                  : 5 12 15
WHILE                : 59
WITH                 : 
WRITELN              : 49
error                : 

Nonterminals, with rules where they appear

adding_operator      : 65
arguments            : 37 49
arguments2           : 38 39 42 43
array_type           : 19
assert_statement     : 35
assignment_statement : 30
block                : 1 10 11 54
block2               : 22 23 25
boolean_expr         : 50 57 58 59
call                 : 31 68
declaration          : 29
empty                : 6 9 14 17 24 40 41 64 93
expr                 : 36 38 39 42 43 45 71
factor               : 66 67 67 72 73
function_declaration : 4
if_statement         : 55
literal              : 53 53 70
multiplying_operator : 67
parameters           : 11
parameters2          : 12 13 15 16
procedure_declaration : 3
procedure_declaration2 : 8
program              : 0
read_statement       : 33
read_statement2      : 46 48
relational_operator  : 53 61
return_statement     : 32
sign                 : 62
simple_expr          : 60 61 61
simple_expr2         : 62 63 65
simple_statement     : 27
simple_type          : 18 20
statement            : 22 23 25 57 58 58 59
string               : 92 94
structured_statement : 28
term                 : 62 63 65
type                 : 5 11 12 13 15 16
var_declaration      : 2
var_declaration2     : 5 7
variable             : 36 47 48 69
while_statement      : 56
write_statement      : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block
    (22) block -> . BEGIN statement block2 SEMICOLON END DOT
    (23) block -> . BEGIN statement block2 END DOT

    BEGIN           shift and go to state 6

    block                          shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON block .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block .)


state 6

    (22) block -> BEGIN . statement block2 SEMICOLON END DOT
    (23) block -> BEGIN . statement block2 END DOT
    (27) statement -> . simple_statement
    (28) statement -> . structured_statement
    (29) statement -> . declaration
    (30) simple_statement -> . assignment_statement
    (31) simple_statement -> . call
    (32) simple_statement -> . return_statement
    (33) simple_statement -> . read_statement
    (34) simple_statement -> . write_statement
    (35) simple_statement -> . assert_statement
    (54) structured_statement -> . block
    (55) structured_statement -> . if_statement
    (56) structured_statement -> . while_statement
    (2) declaration -> . var_declaration
    (3) declaration -> . procedure_declaration
    (4) declaration -> . function_declaration
    (36) assignment_statement -> . variable ASSIGN expr
    (37) call -> . ID LPAREN arguments RPAREN
    (44) return_statement -> . RETURN
    (45) return_statement -> . RETURN expr
    (46) read_statement -> . READ LPAREN read_statement2 RPAREN
    (49) write_statement -> . WRITELN LPAREN arguments RPAREN
    (50) assert_statement -> . ASSERT LPAREN boolean_expr RPAREN
    (22) block -> . BEGIN statement block2 SEMICOLON END DOT
    (23) block -> . BEGIN statement block2 END DOT
    (57) if_statement -> . IF boolean_expr THEN statement
    (58) if_statement -> . IF boolean_expr THEN statement ELSE statement
    (59) while_statement -> . WHILE boolean_expr DO statement
    (5) var_declaration -> . VAR ID var_declaration2 COLON type
    (8) procedure_declaration -> . procedure_declaration2 SEMICOLON
    (9) procedure_declaration -> . empty
    (11) function_declaration -> . FUNCTION ID LPAREN parameters RPAREN COLON type SEMICOLON block
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (10) procedure_declaration2 -> . PROCEDURE ID SEMICOLON block
    (26) empty -> .

    ID              shift and go to state 24
    RETURN          shift and go to state 25
    READ            shift and go to state 26
    WRITELN         shift and go to state 27
    ASSERT          shift and go to state 28
    BEGIN           shift and go to state 6
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    VAR             shift and go to state 31
    FUNCTION        shift and go to state 34
    LBRACKET        shift and go to state 35
    PROCEDURE       shift and go to state 36
    SEMICOLON       reduce using rule 26 (empty -> .)
    END             reduce using rule 26 (empty -> .)

    statement                      shift and go to state 7
    simple_statement               shift and go to state 8
    structured_statement           shift and go to state 9
    declaration                    shift and go to state 10
    assignment_statement           shift and go to state 11
    call                           shift and go to state 12
    return_statement               shift and go to state 13
    read_statement                 shift and go to state 14
    write_statement                shift and go to state 15
    assert_statement               shift and go to state 16
    block                          shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    var_declaration                shift and go to state 20
    procedure_declaration          shift and go to state 21
    function_declaration           shift and go to state 22
    variable                       shift and go to state 23
    procedure_declaration2         shift and go to state 32
    empty                          shift and go to state 33

state 7

    (22) block -> BEGIN statement . block2 SEMICOLON END DOT
    (23) block -> BEGIN statement . block2 END DOT
    (24) block2 -> . empty
    (25) block2 -> . SEMICOLON statement block2
    (26) empty -> .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 38
    END             reduce using rule 26 (empty -> .)

  ! SEMICOLON       [ reduce using rule 26 (empty -> .) ]

    block2                         shift and go to state 37
    empty                          shift and go to state 39

state 8

    (27) statement -> simple_statement .

    SEMICOLON       reduce using rule 27 (statement -> simple_statement .)
    END             reduce using rule 27 (statement -> simple_statement .)
    ELSE            reduce using rule 27 (statement -> simple_statement .)


state 9

    (28) statement -> structured_statement .

    SEMICOLON       reduce using rule 28 (statement -> structured_statement .)
    END             reduce using rule 28 (statement -> structured_statement .)
    ELSE            reduce using rule 28 (statement -> structured_statement .)


state 10

    (29) statement -> declaration .

    SEMICOLON       reduce using rule 29 (statement -> declaration .)
    END             reduce using rule 29 (statement -> declaration .)
    ELSE            reduce using rule 29 (statement -> declaration .)


state 11

    (30) simple_statement -> assignment_statement .

    SEMICOLON       reduce using rule 30 (simple_statement -> assignment_statement .)
    END             reduce using rule 30 (simple_statement -> assignment_statement .)
    ELSE            reduce using rule 30 (simple_statement -> assignment_statement .)


state 12

    (31) simple_statement -> call .

    SEMICOLON       reduce using rule 31 (simple_statement -> call .)
    END             reduce using rule 31 (simple_statement -> call .)
    ELSE            reduce using rule 31 (simple_statement -> call .)


state 13

    (32) simple_statement -> return_statement .

    SEMICOLON       reduce using rule 32 (simple_statement -> return_statement .)
    END             reduce using rule 32 (simple_statement -> return_statement .)
    ELSE            reduce using rule 32 (simple_statement -> return_statement .)


state 14

    (33) simple_statement -> read_statement .

    SEMICOLON       reduce using rule 33 (simple_statement -> read_statement .)
    END             reduce using rule 33 (simple_statement -> read_statement .)
    ELSE            reduce using rule 33 (simple_statement -> read_statement .)


state 15

    (34) simple_statement -> write_statement .

    SEMICOLON       reduce using rule 34 (simple_statement -> write_statement .)
    END             reduce using rule 34 (simple_statement -> write_statement .)
    ELSE            reduce using rule 34 (simple_statement -> write_statement .)


state 16

    (35) simple_statement -> assert_statement .

    SEMICOLON       reduce using rule 35 (simple_statement -> assert_statement .)
    END             reduce using rule 35 (simple_statement -> assert_statement .)
    ELSE            reduce using rule 35 (simple_statement -> assert_statement .)


state 17

    (54) structured_statement -> block .

    SEMICOLON       reduce using rule 54 (structured_statement -> block .)
    END             reduce using rule 54 (structured_statement -> block .)
    ELSE            reduce using rule 54 (structured_statement -> block .)


state 18

    (55) structured_statement -> if_statement .

    SEMICOLON       reduce using rule 55 (structured_statement -> if_statement .)
    END             reduce using rule 55 (structured_statement -> if_statement .)
    ELSE            reduce using rule 55 (structured_statement -> if_statement .)


state 19

    (56) structured_statement -> while_statement .

    SEMICOLON       reduce using rule 56 (structured_statement -> while_statement .)
    END             reduce using rule 56 (structured_statement -> while_statement .)
    ELSE            reduce using rule 56 (structured_statement -> while_statement .)


state 20

    (2) declaration -> var_declaration .

    SEMICOLON       reduce using rule 2 (declaration -> var_declaration .)
    END             reduce using rule 2 (declaration -> var_declaration .)
    ELSE            reduce using rule 2 (declaration -> var_declaration .)


state 21

    (3) declaration -> procedure_declaration .

    SEMICOLON       reduce using rule 3 (declaration -> procedure_declaration .)
    END             reduce using rule 3 (declaration -> procedure_declaration .)
    ELSE            reduce using rule 3 (declaration -> procedure_declaration .)


state 22

    (4) declaration -> function_declaration .

    SEMICOLON       reduce using rule 4 (declaration -> function_declaration .)
    END             reduce using rule 4 (declaration -> function_declaration .)
    ELSE            reduce using rule 4 (declaration -> function_declaration .)


state 23

    (36) assignment_statement -> variable . ASSIGN expr

    ASSIGN          shift and go to state 40


state 24

    (37) call -> ID . LPAREN arguments RPAREN
    (74) variable -> ID .

    LPAREN          shift and go to state 41
    ASSIGN          reduce using rule 74 (variable -> ID .)


state 25

    (44) return_statement -> RETURN .
    (45) return_statement -> RETURN . expr
    (60) expr -> . simple_expr
    (61) expr -> . simple_expr relational_operator simple_expr
    (62) simple_expr -> . sign term simple_expr2
    (63) simple_expr -> . term simple_expr2
    (82) sign -> . PLUS
    (83) sign -> . MINUS
    (66) term -> . factor
    (67) term -> . factor multiplying_operator factor
    (68) factor -> . call
    (69) factor -> . variable
    (70) factor -> . literal
    (71) factor -> . LPAREN expr RPAREN
    (72) factor -> . NOT factor
    (73) factor -> . factor DOT SIZE
    (37) call -> . ID LPAREN arguments RPAREN
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string
    (26) empty -> .

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! reduce/reduce conflict for SEMICOLON resolved using rule 26 (empty -> .)
  ! reduce/reduce conflict for END resolved using rule 26 (empty -> .)
  ! reduce/reduce conflict for ELSE resolved using rule 26 (empty -> .)
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    LPAREN          shift and go to state 52
    NOT             shift and go to state 53
    ID              shift and go to state 54
    LBRACKET        shift and go to state 35
    NUMBER          shift and go to state 55
    DOT             reduce using rule 26 (empty -> .)
    TIMES           reduce using rule 26 (empty -> .)
    DIVIDE          reduce using rule 26 (empty -> .)
    PERCENTAGE      reduce using rule 26 (empty -> .)
    AND             reduce using rule 26 (empty -> .)
    OR              reduce using rule 26 (empty -> .)
    EQUAL           reduce using rule 26 (empty -> .)
    LESS            reduce using rule 26 (empty -> .)
    LESSEQUAL       reduce using rule 26 (empty -> .)
    GREATER         reduce using rule 26 (empty -> .)
    SEMICOLON       reduce using rule 26 (empty -> .)
    END             reduce using rule 26 (empty -> .)
    ELSE            reduce using rule 26 (empty -> .)

  ! SEMICOLON       [ reduce using rule 44 (return_statement -> RETURN .) ]
  ! END             [ reduce using rule 44 (return_statement -> RETURN .) ]
  ! ELSE            [ reduce using rule 44 (return_statement -> RETURN .) ]
  ! PLUS            [ reduce using rule 26 (empty -> .) ]
  ! MINUS           [ reduce using rule 26 (empty -> .) ]

    expr                           shift and go to state 42
    simple_expr                    shift and go to state 43
    sign                           shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 48
    call                           shift and go to state 49
    variable                       shift and go to state 50
    literal                        shift and go to state 51
    string                         shift and go to state 56
    empty                          shift and go to state 57

state 26

    (46) read_statement -> READ . LPAREN read_statement2 RPAREN

    LPAREN          shift and go to state 58


state 27

    (49) write_statement -> WRITELN . LPAREN arguments RPAREN

    LPAREN          shift and go to state 59


state 28

    (50) assert_statement -> ASSERT . LPAREN boolean_expr RPAREN

    LPAREN          shift and go to state 60


state 29

    (57) if_statement -> IF . boolean_expr THEN statement
    (58) if_statement -> IF . boolean_expr THEN statement ELSE statement
    (51) boolean_expr -> . TRUE
    (52) boolean_expr -> . FALSE
    (53) boolean_expr -> . literal relational_operator literal
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string
    (26) empty -> .

    TRUE            shift and go to state 62
    FALSE           shift and go to state 63
    NUMBER          shift and go to state 55
    ID              shift and go to state 65
    EQUAL           reduce using rule 26 (empty -> .)
    LESS            reduce using rule 26 (empty -> .)
    LESSEQUAL       reduce using rule 26 (empty -> .)
    GREATER         reduce using rule 26 (empty -> .)

    boolean_expr                   shift and go to state 61
    literal                        shift and go to state 64
    string                         shift and go to state 56
    empty                          shift and go to state 57

state 30

    (59) while_statement -> WHILE . boolean_expr DO statement
    (51) boolean_expr -> . TRUE
    (52) boolean_expr -> . FALSE
    (53) boolean_expr -> . literal relational_operator literal
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string
    (26) empty -> .

    TRUE            shift and go to state 62
    FALSE           shift and go to state 63
    NUMBER          shift and go to state 55
    ID              shift and go to state 65
    EQUAL           reduce using rule 26 (empty -> .)
    LESS            reduce using rule 26 (empty -> .)
    LESSEQUAL       reduce using rule 26 (empty -> .)
    GREATER         reduce using rule 26 (empty -> .)

    boolean_expr                   shift and go to state 66
    literal                        shift and go to state 64
    string                         shift and go to state 56
    empty                          shift and go to state 57

state 31

    (5) var_declaration -> VAR . ID var_declaration2 COLON type

    ID              shift and go to state 67


state 32

    (8) procedure_declaration -> procedure_declaration2 . SEMICOLON

    SEMICOLON       shift and go to state 68


state 33

    (9) procedure_declaration -> empty .

    SEMICOLON       reduce using rule 9 (procedure_declaration -> empty .)
    END             reduce using rule 9 (procedure_declaration -> empty .)
    ELSE            reduce using rule 9 (procedure_declaration -> empty .)


state 34

    (11) function_declaration -> FUNCTION . ID LPAREN parameters RPAREN COLON type SEMICOLON block

    ID              shift and go to state 69


state 35

    (75) variable -> LBRACKET . ID NUMBER RBRACKET

    ID              shift and go to state 70


state 36

    (10) procedure_declaration2 -> PROCEDURE . ID SEMICOLON block

    ID              shift and go to state 71


state 37

    (22) block -> BEGIN statement block2 . SEMICOLON END DOT
    (23) block -> BEGIN statement block2 . END DOT

    SEMICOLON       shift and go to state 72
    END             shift and go to state 73


state 38

    (25) block2 -> SEMICOLON . statement block2
    (27) statement -> . simple_statement
    (28) statement -> . structured_statement
    (29) statement -> . declaration
    (30) simple_statement -> . assignment_statement
    (31) simple_statement -> . call
    (32) simple_statement -> . return_statement
    (33) simple_statement -> . read_statement
    (34) simple_statement -> . write_statement
    (35) simple_statement -> . assert_statement
    (54) structured_statement -> . block
    (55) structured_statement -> . if_statement
    (56) structured_statement -> . while_statement
    (2) declaration -> . var_declaration
    (3) declaration -> . procedure_declaration
    (4) declaration -> . function_declaration
    (36) assignment_statement -> . variable ASSIGN expr
    (37) call -> . ID LPAREN arguments RPAREN
    (44) return_statement -> . RETURN
    (45) return_statement -> . RETURN expr
    (46) read_statement -> . READ LPAREN read_statement2 RPAREN
    (49) write_statement -> . WRITELN LPAREN arguments RPAREN
    (50) assert_statement -> . ASSERT LPAREN boolean_expr RPAREN
    (22) block -> . BEGIN statement block2 SEMICOLON END DOT
    (23) block -> . BEGIN statement block2 END DOT
    (57) if_statement -> . IF boolean_expr THEN statement
    (58) if_statement -> . IF boolean_expr THEN statement ELSE statement
    (59) while_statement -> . WHILE boolean_expr DO statement
    (5) var_declaration -> . VAR ID var_declaration2 COLON type
    (8) procedure_declaration -> . procedure_declaration2 SEMICOLON
    (9) procedure_declaration -> . empty
    (11) function_declaration -> . FUNCTION ID LPAREN parameters RPAREN COLON type SEMICOLON block
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (10) procedure_declaration2 -> . PROCEDURE ID SEMICOLON block
    (26) empty -> .

    ID              shift and go to state 24
    RETURN          shift and go to state 25
    READ            shift and go to state 26
    WRITELN         shift and go to state 27
    ASSERT          shift and go to state 28
    BEGIN           shift and go to state 6
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    VAR             shift and go to state 31
    FUNCTION        shift and go to state 34
    LBRACKET        shift and go to state 35
    PROCEDURE       shift and go to state 36
    SEMICOLON       reduce using rule 26 (empty -> .)
    END             reduce using rule 26 (empty -> .)

    statement                      shift and go to state 74
    simple_statement               shift and go to state 8
    structured_statement           shift and go to state 9
    declaration                    shift and go to state 10
    assignment_statement           shift and go to state 11
    call                           shift and go to state 12
    return_statement               shift and go to state 13
    read_statement                 shift and go to state 14
    write_statement                shift and go to state 15
    assert_statement               shift and go to state 16
    block                          shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    var_declaration                shift and go to state 20
    procedure_declaration          shift and go to state 21
    function_declaration           shift and go to state 22
    variable                       shift and go to state 23
    procedure_declaration2         shift and go to state 32
    empty                          shift and go to state 33

state 39

    (24) block2 -> empty .

    SEMICOLON       reduce using rule 24 (block2 -> empty .)
    END             reduce using rule 24 (block2 -> empty .)


state 40

    (36) assignment_statement -> variable ASSIGN . expr
    (60) expr -> . simple_expr
    (61) expr -> . simple_expr relational_operator simple_expr
    (62) simple_expr -> . sign term simple_expr2
    (63) simple_expr -> . term simple_expr2
    (82) sign -> . PLUS
    (83) sign -> . MINUS
    (66) term -> . factor
    (67) term -> . factor multiplying_operator factor
    (68) factor -> . call
    (69) factor -> . variable
    (70) factor -> . literal
    (71) factor -> . LPAREN expr RPAREN
    (72) factor -> . NOT factor
    (73) factor -> . factor DOT SIZE
    (37) call -> . ID LPAREN arguments RPAREN
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string
    (26) empty -> .

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    LPAREN          shift and go to state 52
    NOT             shift and go to state 53
    ID              shift and go to state 54
    LBRACKET        shift and go to state 35
    NUMBER          shift and go to state 55
    DOT             reduce using rule 26 (empty -> .)
    TIMES           reduce using rule 26 (empty -> .)
    DIVIDE          reduce using rule 26 (empty -> .)
    PERCENTAGE      reduce using rule 26 (empty -> .)
    AND             reduce using rule 26 (empty -> .)
    OR              reduce using rule 26 (empty -> .)
    EQUAL           reduce using rule 26 (empty -> .)
    LESS            reduce using rule 26 (empty -> .)
    LESSEQUAL       reduce using rule 26 (empty -> .)
    GREATER         reduce using rule 26 (empty -> .)
    SEMICOLON       reduce using rule 26 (empty -> .)
    END             reduce using rule 26 (empty -> .)
    ELSE            reduce using rule 26 (empty -> .)

  ! PLUS            [ reduce using rule 26 (empty -> .) ]
  ! MINUS           [ reduce using rule 26 (empty -> .) ]

    variable                       shift and go to state 50
    expr                           shift and go to state 75
    simple_expr                    shift and go to state 43
    sign                           shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 48
    call                           shift and go to state 49
    literal                        shift and go to state 51
    string                         shift and go to state 56
    empty                          shift and go to state 57

state 41

    (37) call -> ID LPAREN . arguments RPAREN
    (38) arguments -> . expr arguments2
    (39) arguments -> . SIMPLEQUOTE expr SIMPLEQUOTE arguments2
    (40) arguments -> . empty
    (60) expr -> . simple_expr
    (61) expr -> . simple_expr relational_operator simple_expr
    (26) empty -> .
    (62) simple_expr -> . sign term simple_expr2
    (63) simple_expr -> . term simple_expr2
    (82) sign -> . PLUS
    (83) sign -> . MINUS
    (66) term -> . factor
    (67) term -> . factor multiplying_operator factor
    (68) factor -> . call
    (69) factor -> . variable
    (70) factor -> . literal
    (71) factor -> . LPAREN expr RPAREN
    (72) factor -> . NOT factor
    (73) factor -> . factor DOT SIZE
    (37) call -> . ID LPAREN arguments RPAREN
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    SIMPLEQUOTE     shift and go to state 78
    RPAREN          reduce using rule 26 (empty -> .)
    DOT             reduce using rule 26 (empty -> .)
    TIMES           reduce using rule 26 (empty -> .)
    DIVIDE          reduce using rule 26 (empty -> .)
    PERCENTAGE      reduce using rule 26 (empty -> .)
    AND             reduce using rule 26 (empty -> .)
    OR              reduce using rule 26 (empty -> .)
    EQUAL           reduce using rule 26 (empty -> .)
    LESS            reduce using rule 26 (empty -> .)
    LESSEQUAL       reduce using rule 26 (empty -> .)
    GREATER         reduce using rule 26 (empty -> .)
    COMMA           reduce using rule 26 (empty -> .)
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    LPAREN          shift and go to state 52
    NOT             shift and go to state 53
    ID              shift and go to state 54
    LBRACKET        shift and go to state 35
    NUMBER          shift and go to state 55

  ! PLUS            [ reduce using rule 26 (empty -> .) ]
  ! MINUS           [ reduce using rule 26 (empty -> .) ]

    arguments                      shift and go to state 76
    expr                           shift and go to state 77
    empty                          shift and go to state 79
    simple_expr                    shift and go to state 43
    sign                           shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 48
    call                           shift and go to state 49
    variable                       shift and go to state 50
    literal                        shift and go to state 51
    string                         shift and go to state 56

state 42

    (45) return_statement -> RETURN expr .

    SEMICOLON       reduce using rule 45 (return_statement -> RETURN expr .)
    END             reduce using rule 45 (return_statement -> RETURN expr .)
    ELSE            reduce using rule 45 (return_statement -> RETURN expr .)


state 43

    (60) expr -> simple_expr .
    (61) expr -> simple_expr . relational_operator simple_expr
    (76) relational_operator -> . EQUAL
    (77) relational_operator -> . LESS GREATER
    (78) relational_operator -> . LESS
    (79) relational_operator -> . LESSEQUAL
    (80) relational_operator -> . GREATER EQUAL
    (81) relational_operator -> . GREATER

    SEMICOLON       reduce using rule 60 (expr -> simple_expr .)
    END             reduce using rule 60 (expr -> simple_expr .)
    ELSE            reduce using rule 60 (expr -> simple_expr .)
    COMMA           reduce using rule 60 (expr -> simple_expr .)
    RPAREN          reduce using rule 60 (expr -> simple_expr .)
    SIMPLEQUOTE     reduce using rule 60 (expr -> simple_expr .)
    EQUAL           shift and go to state 81
    LESS            shift and go to state 82
    LESSEQUAL       shift and go to state 84
    GREATER         shift and go to state 83

    relational_operator            shift and go to state 80

state 44

    (62) simple_expr -> sign . term simple_expr2
    (66) term -> . factor
    (67) term -> . factor multiplying_operator factor
    (68) factor -> . call
    (69) factor -> . variable
    (70) factor -> . literal
    (71) factor -> . LPAREN expr RPAREN
    (72) factor -> . NOT factor
    (73) factor -> . factor DOT SIZE
    (37) call -> . ID LPAREN arguments RPAREN
    (74) variable -> . ID
    (75) variable -> . LBRACKET ID NUMBER RBRACKET
    (91) literal -> . NUMBER
    (92) literal -> . string
    (93) string -> . empty
    (94) string -> . ID string
    (26) empty -> .
